<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/llEmptyState_layout"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:elevation="3dp"
  android:gravity="center"
	android:visibility="gone"
  android:orientation="vertical"
  android:padding="16dp">

  <LinearLayout
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_gravity="center"
	android:layout_marginLeft="32dp"
	android:layout_marginRight="32dp"
	android:background="@drawable/rect_grey_bg_dotted_stroke"
	android:gravity="center_horizontal"
	android:orientation="vertical"
	android:padding="16dp"

	>

	<TextView
	  android:id="@+id/tvEmptyState_title"
	  fontPath="@string/font_medium"
	  android:layout_width="wrap_content"
	  android:layout_height="match_parent"
	  android:layout_weight="1"
	  android:text="No items in Cart"
	  android:textColor="@color/text_black_2"
	  android:textSize="18sp"
	  tools:ignore="MissingPrefix" />

	<TextView
	  android:id="@+id/tvEmptyState_description"
	  fontPath="@string/font_regular"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  android:layout_marginTop="8dp"
	  android:gravity="center"
	  android:lineSpacingMultiplier="1.16959"
	  android:text="@string/when_you_add_items_to_cart_they_will_appear_here"
	  android:textColor="@color/text_black_5"
	  android:textSize="16sp"
	  tools:ignore="MissingPrefix" />

	<Button
	  android:id="@+id/bEmptyState_action"
	  android:layout_width="wrap_content"
	  android:layout_height="match_parent"
	  android:layout_marginLeft="0dp"
	  android:layout_marginTop="16dp"
	  android:layout_marginRight="0dp"
	  android:layout_marginBottom="16dp"
	  android:background="@color/colorPrimary"
	  android:paddingLeft="16dp"
	  android:paddingRight="16dp"
	  android:text="@string/browse_products"
	  android:textAllCaps="false"
	  android:textColor="#ffffff"
	  android:textSize="18sp"
	  />


  </LinearLayout>


</LinearLayout>