<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <androidx.constraintlayout.widget.ConstraintLayout
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.membership.MembershipListActivity">

	<include
	  android:id="@+id/toolbar_container"
	  layout="@layout/toolbar" />
	<LinearLayout
	  android:id="@+id/error_layout"
	  android:layout_width="0dp"
	  android:layout_height="wrap_content"
	  android:layout_gravity="center"
	  android:layout_margin="32dp"
	  android:layout_marginLeft="32dp"
	  android:layout_marginRight="32dp"
	  android:background="@drawable/rect_grey_bg_dotted_stroke"
	  android:gravity="center_horizontal"
	  android:orientation="vertical"
	  android:padding="16dp"
	  android:visibility="gone"
	  app:layout_constraintBottom_toBottomOf="parent"
	  app:layout_constraintEnd_toEndOf="parent"
	  app:layout_constraintStart_toStartOf="parent"
	  app:layout_constraintTop_toBottomOf="@id/toolbar_container">

	  <TextView
		android:id="@+id/tvEmptyState_title"
		fontPath="@string/font_medium"
		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:text="@string/no_plans"
		android:textColor="@color/text_black_2"
		android:textSize="18sp"
		tools:ignore="MissingPrefix" />

	  <TextView
		android:id="@+id/tvEmptyState_description"
		fontPath="@string/font_regular"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:gravity="center"
		android:text="@string/no_plan_description"
		android:textColor="@color/text_black_5"
		android:textSize="16sp"
		tools:ignore="MissingPrefix" />

	</LinearLayout>

	<androidx.recyclerview.widget.RecyclerView
	  android:id="@+id/plans"
	  android:clipChildren="false"
	  android:clipToPadding="false"
	  android:paddingHorizontal="16dp"
	  app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
	  android:paddingBottom="16dp"
	  app:layout_constraintTop_toBottomOf="@id/toolbar_container"
	  app:layout_constraintBottom_toBottomOf="parent"
	  app:layout_constraintStart_toStartOf="parent"
	  app:layout_constraintEnd_toEndOf="parent"
	  android:layout_width="0dp"
	  android:layout_height="0dp"/>


  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>